# Master-Of-Picture-Finding-CPP

./: .gitignore  CMakeLists.txt  main.cpp
core/: Master.h
core/ffmpeg/: FFmpegWrapper.cpp  FFmpegWrapper.h
core/log/: AbstractLogger.h  Logger.cpp  Logger.h
core/log/android/: AndroidLogger.cpp  AndroidLogger.h
core/log/std/: StdLogger.cpp  StdLogger.h
core/utils/: FileUtils.cpp  FileUtils.h
